--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@commitlint/cli": "^17.1.2",
     "@commitlint/config-conventional": "^17.1.0",
     "@nrwl/cli": "15.0.3",
+    "@nrwl/cypress": "15.0.3",
     "@nrwl/devkit": "15.0.3",
     "@nrwl/eslint-plugin-nx": "15.0.3",
     "@nrwl/jest": "15.0.3",
@@ -35,8 +36,10 @@
     "@typescript-eslint/parser": "^5.36.1",
     "babel-jest": "28.1.1",
     "commitlint-config-gitmoji": "^2.2.6",
+    "cypress": "^10.7.0",
     "eslint": "~8.15.0",
     "eslint-config-prettier": "8.1.0",
+    "eslint-plugin-cypress": "^2.10.3",
     "eslint-plugin-import": "2.26.0",
     "eslint-plugin-jsx-a11y": "6.6.1",
     "eslint-plugin-prettier": "^4.2.1",
@@ -56,10 +59,12 @@
     "typescript": "~4.8.2"
   },
   "dependencies": {
+    "@fluentui/react": "^8.99.0",
     "@swc/helpers": "~0.4.11",
     "core-js": "^3.6.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.38.0",
     "regenerator-runtime": "0.13.7",
     "tslib": "^2.3.0"
   },
