--- a/package.json
+++ b/package.json
@@ -62,10 +62,12 @@
     "@fluentui/react": "^8.99.0",
     "@swc/helpers": "~0.4.11",
     "core-js": "^3.6.5",
+    "rc-upload": "^4.3.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.38.0",
     "regenerator-runtime": "0.13.7",
+    "timezones-list": "^3.0.1",
     "tslib": "^2.3.0"
   },
   "standard-version": {
